Fix config spacing

--- a/src/app/configuration/configuration/configuration.component.scss
+++ b/src/app/configuration/configuration/configuration.component.scss
@@ -1,13 +1,6 @@
 .flex-container {
     display: flex;
     flex-direction: column;
-    margin: 15px 0;
+    margin: 15px 5px;
 }
-mat-slide-toggle {
-    margin-bottom: 5px;
-    margin: 0 5vw;
-}
-mat-form-field {
-    width: 90%;
-    margin: 0 5vw;
-}
+
